# doit

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  doit.db  entrypoint.sh  pyproject.toml
backend/app_utils/: admin.py  encoder.py  forms.py  models.py  serializers.py
backend/app_utils/fixtures/: fixtures.json
backend/app_utils/migrations/: 0001_initial.py  0002_order_description.py  0002_ordertag.py  0003_alter_order_is_special.py  0003_auto_20220113_1805.py  0004_auto_20220115_0026.py  0005_auto_20220116_1325.py  0006_alter_orderapplicant_unique_together.py
backend/app_utils/services/: cloudinary.py
backend/authorization/: admin.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/dashboard/: admin.py
backend/db_models/: models.py
backend/db_models/migrations/: 0001_initial.py  0002_auto_20211130_0749.py  0002_customuser_slug.py  0003_alter_stockorder_tags.py  0003_auto_20210705_2126.py  0004_alter_stockorder_tags.py  0004_auto_20211124_1231.py  0004_customuser_avatar_id.py  0005_alter_customuser_user_type.py  0005_auto_20211130_1156.py  0006_stockorder_slug.py
backend/emails/: send.py
backend/master_data/: admin.py  urls.py  views.py
backend/orders/: urls.py  views.py
backend/payload_forms/: registration.py
backend/serializers/: __init__.py  serializers.py
backend/services/: cloudinary.py  mailgun.py
backend/servises/: mailgun.py
backend/stock/: urls.py  views.py
backend/user/: urls.py  views.py
backend/users/: urls.py  views.py
db/: Dockerfile
(+23 files in other folders)
